--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.x' # Adjust to match your project
+          flutter-version: '3.32.8' # Adjust to match your project
 
       - name: Install dependencies
         run: flutter pub get
