--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -1,44 +1,61 @@
-name: Build iOS App
+name: Flutter iOS Build
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-  workflow_dispatch:  # allows manual   trigger
+    branches: [ main ]
 
 jobs:
-  build-ios:
-    runs-on: macos-latest  # Use the latest macOS version
+  build_ios:
+    runs-on: macos-latest # Use the macOS runner
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v4 # Checkout your repository code
 
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: 3.8.2
-          channel: stable
-          architecture: ARM64
-          cache: false
-          pub-cache-path: default
-          dry-run: false
-          git-source: https://github.com/flutter/flutter.git
-          
-      - name: Install dependencies
-        run: flutter pub get
+    - name: Set up Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: '3.8.2' # Specify your Flutter version
+        channel: stable
 
-      - name: Build iOS
-        run: flutter build ios --release
+    - name: Install dependencies
+      run: flutter pub get
 
-      - name: Archive build
-        run: |
-          mkdir -p output
-          cp -r build/ios/iphoneos/Runner.app output/
+    - name: Install CocoaPods
+      run: |
+        cd ios
+        pod install --repo-update # Install iOS dependencies
 
-      - name: Upload iOS build artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: ios-app
-          path: output/
+    - name: Decode Apple Certificate and Provisioning Profile
+      env:
+        BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
+        BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.BUILD_PROVISION_PROFILE_BASE64 }}
+        KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+      run: |
+        mkdir -p ~/Library/MobileDevice/Provisioning Profiles/
+        echo "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode > ~/Library/MobileDevice/Provisioning Profiles/app.mobileprovision
+
+        security create-keychain -p "$KEYCHAIN_PASSWORD" build.keychain
+        security default-keychain -s build.keychain
+        security unlock-keychain -p "$KEYCHAIN_PASSWORD" build.keychain
+        security set-keychain-settings -t 3600 -l ~/Library/Keychains/build.keychain
+        echo "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o certificate.p12
+        security import certificate.p12 -k ~/Library/Keychains/build.keychain -P "$CERTIFICATE_PASSWORD" -A
+
+    - name: Build iOS IPA
+      env:
+        EXPORT_OPTIONS_PLIST: ${{ secrets.EXPORT_OPTIONS_PLIST }}
+      run: |
+        echo "$EXPORT_OPTIONS_PLIST" | base64 --decode > ExportOptions.plist
+        flutter build ipa --release --export-options-plist=ExportOptions.plist
+
+    - name: Upload IPA as Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: iOS-IPA
+        path: build/ios/ipa/*.ipa
+
+    - name: Clean up keychain
+      if: ${{ always() }}
+      run: security delete-keychain build.keychain # Important for security
