--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,19 +1,16 @@
 workflows:
-  ios-release:
-    name: iOS Release
+  ios-workflow:
+    name: iOS Build
     environment:
       flutter: stable
       xcode: latest
     scripts:
-      - name: Get dependencies
-        script: flutter pub get
-
-      - name: Build iOS archive
-        script: |
-          flutter build ios --release
-
+      - flutter clean
+      - flutter pub get
+      - flutter build ios --release
     artifacts:
       - build/ios/ipa/*.ipa
+
 
     publishing:
       email:
