--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   path_provider: ^2.1.5
-
+  day_picker: 2.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
