--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   path_provider: ^2.1.5
   day_picker: 2.3.0
+  shared_preferences: ^2.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
