--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   path_provider: ^2.1.5
   day_picker: 2.3.0
   shared_preferences: ^2.0.0
+  uuid: ^4.4.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
